added files and images

--- a/index.html
+++ b/index.html
@@ -42,27 +42,38 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
+						<!-- About me -->
 							<article id="AboutMe">
 								<h2 class="major">About me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Currently focusing on changing my career into the tech industry, before I was working in the hospitality industry so that I could have a income coming in and continue my education and earn a degree in engineering. I have developed many different soft skills because of my previous work experience such as communication skills and gained a great deal of patience.
-								 <a href="#resume">awesome resume</a>.</p>
+								 <a href="#resume">Resume</a>.</p>
 								<p>I have always been a hard worker and I always strive to deliver my best, as president of the engineering club at mountain view community college, I was able to work in a team and deliver one of the first functioning projects for the group, which both increased members skills and increased funding for the club. As a student taking my first painting class, I was nominated to represent our school in Dallas art dealers Edith baker scholarship exhibit. In my first engineering drafting class I received an award for the most dedicated for mastering not only the drafting software taught but branching out and learning others as well.
 								</p> 
 								<p>I am interested in the software engineer position because I believe it will open doors for me in a new career in which I belong. I have always loved technology and continue to seek out new technology to try out. 
 									Thank you for your consideration and taking the time in reading my cover letter and resume, I would appreciate to interview for your position I am available anytime. Thank you for taking the time to review my resume. I look forward to talking with you.</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Resume-->
 							<article id="resume">
 								<h2 class="major">resume</h2>
+								<ul class="icons">
+									<li><a href="images/Gonzalo_Trujillo_Resume.pdf" download="Gonzalo_Trujillo_Resume" class="icon solid fa-file-pdf"><span class="label">Resume</span></a></li>
+								</ul>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Detail-oriented problem solver with 460+ training hours and experience developing full stack Java applications highlight my previous work experience and leadership abilities.</p>
+								<h3 class=" major" >Skills</h3>
+								<ul>
+									<li class="icon brands fa-java"> JAVA</li>
+									<li class="icon brands fa-js">  JavaScript</li>
+									<li class="icon brands fa-html5"> HTML</li>
+									<li class="icon brands fa-css3">  CSS</li>
+									<li class="icon brands fa-bootstrap">  Bootstrap</li>
+									<li class="icon brands fa-git-alt">  Git</li>
+								</ul>
 							</article>
 
-						<!-- About -->
+						<!--Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
@@ -71,7 +82,7 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">Contact: <b>Gonzalo Trujillo</b></h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -95,6 +106,7 @@
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/gonzalo-trujillo-77b3b8238" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/gontru" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:gon07tru@gmail.com" target="_blank" rel="noopener noreferrer" class="icon regular fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</article>
 
@@ -344,6 +356,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/gonzalo-trujillo-77b3b8238" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://github.com/gontru" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto:gon07tru@gmail.com" target="_blank" rel="noopener noreferrer" class="icon regular fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
