added profile pic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon " ><img class="img-fluid"src="images/profile-pic1.jpg" style="height:88px; border-radius: 50%; border: 2px solid #ffffff;" alt="."></span>
+							<span class="icon " ><img class="img-fluid logo"src="images/profile-pic1.jpg"  alt="."></span>
 						</div>
 						<div class="content">
 							<div class="inner">
