update till next session

--- a/index.html
+++ b/index.html
@@ -66,44 +66,46 @@
 								 
 								<div class="row">
 									<div class="col-lg-6">
-									  <h3 class="resume-title">Summary</h3>
+									  <h3 class="resume-title major">Summary</h3>
 									  <div class="resume-item pb-0">
 										<p class="resume summary">Gonzalo Trujillo</p>
 										<p><em>Innovative and deadline-driven software engineer experience designing and developing user-centered.</em></p>
 									  </div>
 
-									  <h3 class="resume-title">Education</h3>
+									  <h3 class="resume-title major">Education</h3>
 								<div class="resume-item">
 								<h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
 								<h5>2010 - 2014</h5>
 								<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
 								<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+							</div>
+						    </div>
+
+
+								<div class="col-lg-6">
+									<h3 class="major">Professional Experience</h3>
+									<div class="resume-item">
+									<h4>Senior graphic design specialist</h4>
+									<h5>2019 - Present</h5>
+									<p><em>Experion, New York, NY </em></p>
+									<ul>
+										<li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+										<li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+										<li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+										<li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+									</ul>
+									</div>
 								</div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+								</div>
 								
-								<h3 class=" major" >Skills</h3>
-								<ul class="fa-ul ">
-									<li class="icon brands fa-java"> <span>" JAVA"</span></li>
-									<li class="icon brands fa-js">  JavaScript</li>
-									<li class="icon brands fa-html5"> HTML</li>
-									<li class="icon brands fa-css3">  CSS</li>
-									<li class="icon brands fa-bootstrap">  Bootstrap</li>
-									<li class="icon brands fa-git-alt">  Git</li>
+								<h3 class=" major " >Skills</h3>
+								<ul class="fa-ul  ">
+									<li class="icon brands fa-java" ><span > JAVA</span></li>
+									<li class="icon brands fa-js ">  JavaScript</li> 
+									<li class="icon brands fa-html5 "> HTML</li>
+									<li class="icon brands fa-css3 ">  CSS</li>
+									<li class="icon brands fa-bootstrap ">  Bootstrap</li>
+									<li class="icon brands fa-git-alt ">  Git</li>
 								</ul>
 							</article>
 
@@ -134,8 +136,8 @@
 										  <h4>App 1</h4>
 										  <p>App</p>
 										  <div class="portfolio-links">
-											<a class="image main" href="images/pacman.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-											<a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+											<a class="image main" href="images/pacman.jpg" title="App 1"></a>
+											<a href="https://github.com/gontru" class="icon brands fa-github"><span class="label">GitHub</span></a>
 										  </div>
 										</div>
 									  </div>
