--- a/index.html
+++ b/index.html
@@ -68,16 +68,20 @@
 									<div class="col-lg-6">
 									  <h3 class="resume-title major">Summary</h3>
 									  <div class="resume-item pb-0">
-										<p class="resume summary">Gonzalo Trujillo</p>
+										<h4 class="resume summary">Gonzalo Trujillo</h4>
 										<p><em>Innovative and deadline-driven software engineer experience designing and developing user-centered.</em></p>
 									  </div>
 
 									  <h3 class="resume-title major">Education</h3>
 								<div class="resume-item">
-								<h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-								<h5>2010 - 2014</h5>
-								<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-								<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+								<h4>Associates in science</h4>
+								<h5>2013 - 2015</h5>
+								<p><em>Dallas county community college</em></p>
+								<ul>
+									<li>Associates in science, NTAEE Scholarship, sponsored by the North Texas Association of
+										Engineers.
+										</li>
+								</ul>
 							</div>
 						    </div>
 
@@ -85,14 +89,11 @@
 								<div class="col-lg-6">
 									<h3 class="major">Professional Experience</h3>
 									<div class="resume-item">
-									<h4>Senior graphic design specialist</h4>
-									<h5>2019 - Present</h5>
-									<p><em>Experion, New York, NY </em></p>
+									<h4>Generation Junior Full Stack Java Developer </h4>
+									<h5>May 2022- Aug 2022</h5>
+									<p></p>
 									<ul>
-										<li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-										<li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-										<li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-										<li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+										<li>Participated in a 15 week Junior Full Stack Java Developer program spending over 460+ hours learning the technologies involved to create a full stack web application with Java using Spring Boot Framework, HTML5, CSS3, implementing basic unit tests and deploying the application to Heroku. Expected date of completion: August 2022.</li>
 									</ul>
 									</div>
 								</div>
@@ -136,8 +137,9 @@
 										  <h4>App 1</h4>
 										  <p>App</p>
 										  <div class="portfolio-links">
-											<a class="image main" href="images/pacman.jpg" title="App 1"></a>
 											<a href="https://github.com/gontru" class="icon brands fa-github"><span class="label">GitHub</span></a>
+											<a class="image main" href="images/pacman.jpg" title="App 1"></a>
+											<a href="https://github.com/gontru" class="icon brands fa-github"><span class="label" title="Portfolio Details">GitHub</span></a>
 										  </div>
 										</div>
 									  </div>
@@ -150,17 +152,17 @@
 										  <img class="image main" src="images/pacman.jpg" class="img-fluid" alt="">
 										  <div class="portfolio-info">
 											<h4>App 2</h4>
-											<p>App</p>
+											<p>live view</p>
 											<div class="portfolio-links">
 											  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-											  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+											  <a href="https://github.com/gontru" class="portfolio-details-lightbox icon brands fa-github" data-glightbox="type: external" title="Portfolio Details"></a>
 											</div>
 										  </div>
 										</div>
 									  </div>
 						
 
-								<p>Lorem.  Aliquam olor sit amet.</p>
+								<p>code</p>
 							</article>
 
 						<!-- Contact -->
