--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>I have always been a hard worker and I always strive to deliver my best, as president of the engineering club at mountain view community college, I was able to work in a team and deliver one of the first functioning projects for the group, which both increased members skills and increased funding for the club. As a student taking my first painting class, I was nominated to represent our school in Dallas art dealers Edith baker scholarship exhibit. In my first engineering drafting class I received an award for the most dedicated for mastering not only the drafting software taught but branching out and learning others as well.
 								</p> 
 								<p>I am interested in the software engineer position because I believe it will open doors for me in a new career in which I belong. I have always loved technology and continue to seek out new technology to try out. 
-									Thank you for your consideration and taking the time in reading my cover letter and resume, I would appreciate to interview for your position I am available anytime. Thank you for taking the time to review my resume. I look forward to talking with you.</p>
+									Thank you for your consideration, I would appreciate to interview for your position I am available anytime.I look forward to talking with you.</p>
 							</article>
 
 						<!-- Resume-->
