--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gonzalo Trujillo</h1>
-								<p>A Passionate Developer and passionate about technology</p>
+								<p>A dedicated individual who balances creativity, functionality with the need to maintain good relationships with customers. Equally capable of working alone or as a member of a team, and comfortable exercising initiative and problem solving.</p>
 							</div>
 						</div>
 						<nav>
@@ -48,20 +48,21 @@
 							<article id="AboutMe">
 								<h2 class="major">About me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Currently focusing on changing my career into the tech industry, before I was working in the hospitality industry so that I could have a income coming in and continue my education and earn a degree in engineering. I have developed many different soft skills because of my previous work experience such as communication skills and gained a great deal of patience.
+								<p>I have an addiction to strive to be better and a love for learning while working with others to create magic. I have always loved technology and continue to seek out new technology to learn from and experiment with.
+									 My previous work experience in hospitality showed me that I enjoyed meeting new people and assisting them in having the best experience while on vacation.
+									  Although I loved the customer relations I developed, I was always the person to go to with any computer or technology issue, so much so that the managers, staff and guests came to me first before reaching out to our tech support teams.
 								 <a href="#resume">Resume</a>.</p>
-								<p>I have always been a hard worker and I always strive to deliver my best, as president of the engineering club at mountain view community college, I was able to work in a team and deliver one of the first functioning projects for the group, which both increased members skills and increased funding for the club. As a student taking my first painting class, I was nominated to represent our school in Dallas art dealers Edith baker scholarship exhibit. In my first engineering drafting class I received an award for the most dedicated for mastering not only the drafting software taught but branching out and learning others as well.
-								</p> 
-								<p>I am interested in the software engineer position because I believe it will open doors for me in a new career in which I belong. I have always loved technology and continue to seek out new technology to try out. 
-									Thank you for your consideration, I would appreciate to interview for your position I am available anytime.I look forward to talking with you.</p>
+								<p>   </p> 
+								<p> </p>
 							</article>
 
 						<!-- Resume-->
 							<article id="resume">
 								<h2 class="major">resume</h2>
 								<ul class="icons">
-									<li><a href="images/Gonzalo_Trujillo_Resume.pdf" download="Gonzalo_Trujillo_Resume" class="icon solid fa-file-pdf"><span class="label">Resume</span></a></li>
+									<li>Resume copy <a href="images/Gonzalo_Trujillo_Resume.pdf" download="Gonzalo_Trujillo_Resume" class="icon solid fa-file-pdf"><span class="label">Resume</span></a></li>
 								</ul>
+							
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								 
 								<div class="row">
@@ -446,7 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<li><a href="https://github.com/gontru" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="mailto:gon07tru@gmail.com" target="_blank" rel="noopener noreferrer" class="icon regular fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Gonzalo Design</p>
 					</footer>
 
 			</div>
